--- a/src/sass/public.sass
+++ b/src/sass/public.sass
@@ -1,9 +1,28 @@
 
 body 
   font-family: 'Noto Sans TC', sans-serif
+  color: #333
 
 h1, h2, h3, h4, h5 
   margin: 0
+
+h1 
+  font-size: 2rem
+h2 
+  font-size: 1.875rem
+h3 
+  font-size: 1.5rem
+h4 
+  font-size: 1.25rem
+h5 
+  font-size: 1.125rem
+
+.main_c 
+  color: $main_c 
+.second_c 
+  color: $second_c 
+.danger_c 
+  color: $danger_c 
 
 .flex 
   display: flex 
@@ -19,8 +38,6 @@ h1, h2, h3, h4, h5
   &.v-center 
     align-items: center
 
-
-  
 .fw-500 
   font-weight: 500
 
