Add: register dialog and message Dialog

--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -28,6 +28,20 @@
     &:hover
       border: 1px solid #daa549
       background-color: #daa549
+  &.success 
+    background-color: $success_c
+    border: 1px solid $success_c
+    color: #fff
+    &:hover
+      border: 1px solid #2a712d
+      background-color: #2a712d
+  &.gray 
+    background-color: #9c9c9c
+    border: 1px solid #9c9c9c
+    color: #fff
+    &:hover
+      border: 1px solid #6d6d6d
+      background-color: #6d6d6d
   &.danger 
     background-color: $danger_c
     border: 1px solid $danger_c
