--- a/src/sass/setting.sass
+++ b/src/sass/setting.sass
@@ -1,11 +1,13 @@
+@import './mixin.sass'
 // color
 $main_c: #1b295d
 $second_c: #ffc259
 $light_gray_c: #e3e0db
 $gray_c: #616161
-$success_c: #388e3c
+$success_c: #84c5ab
 $warning_c: #ffa000
 $danger_c: #d32f2f
+$info_c: #0d89ec
 
 // width height 
 $headerH: 60px
