--- a/src/sass/primevue.sass
+++ b/src/sass/primevue.sass
@@ -3,6 +3,8 @@ $shadow_c: rgba($main_c, .3)
 .p-component
   font-family: 'Noto Sans TC', sans-serif
 .p-inputtext
+  line-height: 1.45
+  padding: 6px
   &::placeholder 
     color: #9e9e9e
   &:enabled
