--- a/src/sass/mixin.sass
+++ b/src/sass/mixin.sass
@@ -2,3 +2,7 @@
   font-size: $size
   font-weight: $weight
   color: $color
+
+@mixin bgImgSetting($size:cover)
+  background-size: $size
+  background-position: center
