can update game

--- a/src/sass/primevue.sass
+++ b/src/sass/primevue.sass
@@ -2,34 +2,34 @@ $shadow_c: rgba($main_c, .3)
   
 .p-component
   font-family: 'Noto Sans TC', sans-serif
-.p-inputtext
-  line-height: 1.45
-  padding: 6px
-  &::placeholder 
-    color: #9e9e9e
-  &:enabled
-    &:hover 
-      border-color: $main_c
-    &:focus
-      border-color: $main_c
-      box-shadow: 0 0 0 0.2rem $shadow_c
+// .p-inputtext
+//   line-height: 1.45
+//   padding: 6px
+//   &::placeholder 
+//     color: #9e9e9e
+//   &:enabled
+//     &:hover 
+//       border-color: $main_c
+//     &:focus
+//       border-color: $main_c
+//       box-shadow: 0 0 0 0.2rem $shadow_c
 
-// override radio button
-.p-radiobutton .p-radiobutton-box:not(.p-disabled):not(.p-highlight):hover
-  border-color: $main_c
-.p-radiobutton .p-radiobutton-box:not(.p-disabled).p-focus
-  box-shadow: 0 0 0 0.2rem $shadow_c
-.p-radiobutton .p-radiobutton-box.p-highlight
-  border-color: $main_c
-  background: $main_c
-.p-radiobutton .p-radiobutton-box.p-highlight:not(.p-disabled):hover
-  border-color: $main_c
-  background: $main_c
-.p-radiobutton .p-radiobutton-box.p-highlight:not(.p-disabled)
-  border-color: $main_c
-  background: $main_c
+// // override radio button
+// .p-radiobutton .p-radiobutton-box:not(.p-disabled):not(.p-highlight):hover
+//   border-color: $main_c
+// .p-radiobutton .p-radiobutton-box:not(.p-disabled).p-focus
+//   box-shadow: 0 0 0 0.2rem $shadow_c
+// .p-radiobutton .p-radiobutton-box.p-highlight
+//   border-color: $main_c
+//   background: $main_c
+// .p-radiobutton .p-radiobutton-box.p-highlight:not(.p-disabled):hover
+//   border-color: $main_c
+//   background: $main_c
+// .p-radiobutton .p-radiobutton-box.p-highlight:not(.p-disabled)
+//   border-color: $main_c
+//   background: $main_c
 
-.p-dialog .p-dialog-footer button
-  margin: initial
-  width: initial
+// .p-dialog .p-dialog-footer button
+//   margin: initial
+//   width: initial
     
