--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -4,6 +4,17 @@
   > * 
     &:not(:last-child)
       margin-bottom: .75rem
+
+.gc-fixed-wrapper 
+  position: fixed 
+  bottom: 0 
+  left: 0
+  width: 100% 
+  padding: .5rem 1rem 
+  border-top: 1px solid #eee
+  background-color: #fff
+  box-shadow: 0 -2px 8px 0 rgba(0, 0, 0, 0.15)
+
 .gc-btn 
   border-radius: 4px 
   padding: .75rem 1.5rem
