--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -4,6 +4,12 @@
   > * 
     &:not(:last-child)
       margin-bottom: .75rem
+  &.inline 
+    flex-direction: row
+    > * 
+      width: 100%
+      &:not(:last-child)
+        margin: 0 .75rem 0 0
 
 .gc-fixed-wrapper 
   position: fixed 
@@ -67,6 +73,10 @@
     &:hover 
       background-color: $main_c 
       color: #fff
+  &.hollow-gray 
+    border: 1px solid #ccc
+    color: #666
+    background-color: #fff
   &:disabled
     background-color: #e4dfd6
     border: 1px solid #e4dfd6
