--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -21,7 +21,8 @@
   background-color: #fff
   box-shadow: 0 -2px 8px 0 rgba(0, 0, 0, 0.15)
 
-.gc-btn 
+.gc-btn
+  width: fit-content 
   border-radius: 4px 
   padding: .75rem 1.5rem
   font-size: .875rem
@@ -30,6 +31,7 @@
   transition-timing-function: ease-in-out
   cursor: pointer
   font-weight: 500
+
 
   &.main 
     background-color: $main_c
