--- a/src/sass/public.sass
+++ b/src/sass/public.sass
@@ -40,6 +40,8 @@ a
     flex-direction: column 
   &.v-center 
     align-items: center 
+  &.baseline
+    align-items: baseline 
   &.h-center 
     justify-content: center 
   &.h-end 
