Fix: 創建球賽流程

--- a/src/sass/public.sass
+++ b/src/sass/public.sass
@@ -72,5 +72,13 @@ a
   &.col-2 
     grid-template-columns: 1fr 1fr
 
+.gc-tips
+  display: flex
+  align-items: baseline
+  font-size: .875rem
+  i 
+    margin-right: .25rem 
+    color: $main_c
+
 
     
