--- a/src/sass/public.sass
+++ b/src/sass/public.sass
@@ -80,5 +80,21 @@ a
     margin-right: .25rem 
     color: $main_c
 
+.gc-textarea 
+  width: 100%
+  -webkit-appearance: none
+  background-image: none
+  background-color: #FFF
+  border-radius: 4px
+  border: 1px solid #ccc
+  color: #606266
+  display: inline-block
+  font-size: inherit
+  padding: .75rem
+  transition: border-color .2s cubic-bezier(.645,.045,.355,1)
+  resize: none
+  &:focus
+    border: 1px solid $main_c
+
 
     
