- Add RecomendGames - Add Empty component

--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -61,6 +61,14 @@
     &:hover
       border: 1px solid #6d6d6d
       background-color: #6d6d6d
+  &.white 
+    background-color: #fff
+    border: 1px solid #fff
+    color: $text_c
+    &:hover
+      border: 1px solid #9c9c9c
+      background-color: #9c9c9c
+   
   &.danger 
     background-color: $danger_c
     border: 1px solid $danger_c
@@ -87,6 +95,8 @@
 
   &.full 
     width: 100%
+  &.small 
+    padding: .5rem .75rem
   
 
 .gc-tag
