Fix: z-index buig Add: logo

--- a/src/sass/primevue.sass
+++ b/src/sass/primevue.sass
@@ -1,5 +1,6 @@
 $shadow_c: rgba($main_c, .3)
-  
+.p-datepicker-mask  
+  z-index: 899 !important
 .p-component
   font-family: 'Noto Sans TC', sans-serif
 // .p-inputtext
