Can pop out fb login

--- a/src/sass/primevue.sass
+++ b/src/sass/primevue.sass
@@ -3,6 +3,9 @@ $shadow_c: rgba($main_c, .3)
   z-index: 899 !important
 .p-component
   font-family: 'Noto Sans TC', sans-serif
+
+.p-dialog .p-dialog-footer button
+  margin: initial
 // .p-inputtext
 //   line-height: 1.45
 //   padding: 6px
