--- a/src/sass/button.sass
+++ b/src/sass/button.sass
@@ -87,6 +87,10 @@
     border: 1px solid #ccc
     color: #666
     background-color: #fff
+  &.fb 
+    border: 1px solid #3b5998
+    color: #fff
+    background-color: #3b5998
   &:disabled
     background-color: #e4dfd6
     border: 1px solid #e4dfd6
