--- a/src/sass/public.sass
+++ b/src/sass/public.sass
@@ -57,14 +57,18 @@ a
     justify-items: center
  
 
-.fw-600 
-  font-weight: 600
+.fw-500 
+  font-weight: 500
 
 .pointer 
   cursor: pointer 
 
 .event-none 
   pointer-events: none
+
+.gc-link 
+  text-decoration: underline 
+  color: $main_c
 
 .gc-form 
   display: grid 
